--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Carousel</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link href="css/type.css" rel="stylesheet">
   <link href="css/modules.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -21,11 +21,9 @@
 
       <div class="carousel-inner relative">
         <div class="carousel-items">
-
-          <div class="carousel-item embed embed-golen" id="arsinoitherium">
+          <div class="carousel-item embed embed-golden" id="arsinoitherium">
             <img class="embed-item" src="images/arsinoitherium.jpg" alt="">
           </div>
-
 
           <div class="carousel-item embed embed-golden" id="elasmotherium">
             <img class="embed-item" src="images/elasmotherium.jpg" alt="">
@@ -40,26 +38,24 @@
           </div>
         </div>
 
-        <ul class="carousel-controls">
+        <ul class="carousel-controls list-group-inline pin-cb w-1 text-center push-0 island-1-2">
           <li>
-            <label class="carousel-btn" for="arsinoitherium-control"> Arsinoitherium </label>
+            <label class="carousel-btn icon i-18 ir" for="arsinoitherium-control">Arsinoitherium</label>
           </li>
           <li>
-            <label class="carousel-btn" for="elasmotherium-control"> Elasmotherium</label>
+            <label class="carousel-btn icon i-18 ir" for="elasmotherium-control">Elasmotherium</label>
           </li>
           <li>
-            <label class="carousel-btn" for="glyptodon-control">Glyptodon </label>
+            <label class="carousel-btn icon i-18 ir" for="glyptodon-control">Glyptodon</label>
           </li>
           <li>
-            <label class="carousel-btn" for="megatherium-control"> Megatherium</label>
+            <label class="carousel-btn icon i-18 ir" for="megatherium-control">Megatherium</label>
           </li>
         </ul>
-
       </div>
 
     </div>
 
   </section>
-
 </body>
 </html>
